syntax = "proto3";

option csharp_namespace = "Places.API.Core.Protos";


service gRPCPlaceService{
	rpc GetAll(QueryParameters) returns (PaginationList){
		    //option (google.api.http) = {
				//get: "/api/v1/placesGRPC"
			//};
	}
	rpc GetAllLargeObjects(QueryParameters) returns (PaginationListWithLargeObject);
	rpc GetById(UUID) returns (PlaceGrpc);
}

//basic example in case of request without query params
message Empty{}

//wrapper message for string guid
message UUID{
	string id = 1;
}

message QueryParameters{
	string search = 1;
	int32 pageNumber = 2;
	int32 pageSize = 3;
	string orderBy = 4;
}

message PlaceGrpc{
	string PlaceId = 1;
	string PlaceName = 2;
}

message PlaceGrpcLargeObject{
	string PlaceId = 1;
	string PlaceName = 2;
	string PlaceName2 = 3;
	string PlaceName3 = 4;
	string PlaceName4 = 5;
	string PlaceName5 = 6;
	string PlaceName6 = 7;
	string PlaceName7 = 8;
	string PlaceName8 = 9;
	string PlaceName9 = 10;
	string PlaceName11 = 11;
	string PlaceName12 = 12;
	string PlaceName13 = 13;
	string PlaceName14 = 14;
	string PlaceName15 = 15;
	string PlaceName16 = 16;
	Field PlaceName17 = 17;
	Field PlaceName18 = 18;
	Field PlaceName19 = 19;
	repeated Field PlaceName20 = 20;
	string PlaceName21 = 21;
	string PlaceName22 = 22;
	string PlaceName23 = 23;
	string PlaceName24 = 24;
	string PlaceName25 = 25;
	string PlaceName26 = 26;
	string PlaceName27 = 27;
	string PlaceName28 = 28;
	string PlaceName29 = 29;
	string PlaceName30 = 30;
	string PlaceName31 = 31;
	string PlaceName32 = 32;
	string PlaceName33 = 33;
	string PlaceName34 = 34;
	string PlaceName35 = 35;
	string PlaceName36 = 36;
	string PlaceName37 = 37;
	string PlaceName38 = 38;
	string PlaceName39 = 39;
	string PlaceName40 = 40;
	string PlaceName41 = 41;
	string PlaceName42 = 42;
	string PlaceName43 = 43;
	string PlaceName44 = 44;
	string PlaceName45 = 45;
	string PlaceName46 = 46;
	string PlaceName47 = 47;
	string PlaceName48 = 48;
	string PlaceName49 = 49;
	string PlaceName50 = 50;
	string PlaceName51 = 51;
	string PlaceName52 = 52;
	string PlaceName53 = 53;
	string PlaceName54 = 54;
	string PlaceName55 = 55;
	string PlaceName56 = 56;
	string PlaceName57 = 57;
	string PlaceName58 = 58;
	string PlaceName59 = 59;
	string PlaceName60 = 60;
	Enumeration PlaceName61 = 61;
	Enumeration PlaceName62 = 62;
	Enumeration PlaceName63 = 63;
	Enumeration PlaceName64 = 64;
	repeated Enumeration PlaceName65 = 65;
}

enum Enumeration {
  Primary = 0;
  Secondary = 1;

}

message Field{
	int64 PlaceId = 1;
	int64 PlaceName = 2;
	int64 PlaceName2 = 3;
	int64 PlaceName3 = 4;
	string PlaceName4 = 5;
	string PlaceName5 = 6;
	string PlaceName6 = 7;
}

//basic example in case of returning pure list
message PlaceList{
	repeated PlaceGrpc places = 1;
}

message PaginationList{
	repeated PlaceGrpc places = 1;
	int32 pageIndex = 2;
	int32 pageSize = 3;
	int32 totalPages = 4;
	bool hasPrevious = 5;
	bool hasNext = 6;
}

message PaginationListWithLargeObject{
	bytes places = 1;
	int32 pageIndex = 2;
	int32 pageSize = 3;
	int32 totalPages = 4;
	bool hasPrevious = 5;
	bool hasNext = 6;
}